# tsh

./: Cargo.toml  README.md
src/: delete.rs  main.rs
