[package]
name = "tsh"
description="A simple command line tool to move files to trash"
repository = "https://github.com/imnyang/tsh"

authors = ["imnyang <me@imnya.ng>"]
license = "GPL-3.0"
version = "1.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
crossterm = "0.29.0"
ratatui = "0.29.0"
trash = "5"
